<resources>
    <string name="app_name">Lol Champ Selector</string>

    <!-- toolbar titles -->
    <string name="toolbar_settings">Settings</string>

    <string name="menu_settings">Settings</string>

    <string name="custom_directions">Enter Custom Information</string>
    <string name="custom_button">Find Closest Champion(s)</string>
    <string name="num_results">Number of Results</string>
    <string name="champion">Champion</string>
    <string name="champion_directions">Select a Champion</string>
    <string name="champion_error">Enter a valid champion</string>

    <string name="title_info">Information</string>
    <string name="title_tags">Tags</string>
    <string name="title_passive">Passive</string>
    <string name="title_spells">Spells</string>
    <string name="button_random_champion">Random Champion</string>
    <string name="random_shake">Shake the device to view a random champion</string>

    <!-- champion info titles -->
    <string name="info_attack">Attack</string>
    <string name="info_defense">Defense</string>
    <string name="info_magic">Magic</string>
    <string name="info_difficulty">Difficulty</string>

    <string name="settings_gps_switch">Region and locale from GPS</string>
    <string name="settings_region">Region</string>
    <string name="settings_locale">Locale</string>
    <string name="key_region">key_region</string>
    <string name="key_locale">key_locale</string>
    <string name="key_gps_enabled">key_gps_enabled</string>
    <string name="preference_file_key">lol_champ_selector_pref_file_key_243546</string>
</resources>
