<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.poofstudios.android.lolchampselector.ChampionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/champion_directions"
            android:gravity="center"
            style="@style/TextAppearance.AppTheme.Title"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/champion_autocomplete_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <AutoCompleteTextView
                android:id="@+id/champion_autocomplete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_half"
                android:paddingBottom="@dimen/padding_half"
                android:textSize="@dimen/text_subtitle"
                android:hint="@string/champion"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_default"
            android:text="@string/num_results"
            style="@style/TextAppearance.AppTheme.Subtitle"/>

        <TextView
            android:id="@+id/num_champions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="5"/>

        <SeekBar
            android:id="@+id/bar_num_champions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="9"
            android:paddingTop="@dimen/padding_half"
            android:paddingBottom="@dimen/padding_half"/>

        <Button
            android:id="@+id/button_find_champions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_button"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:layout_marginTop="@dimen/padding_default"
            android:padding="@dimen/padding_button"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

</ScrollView>
